# Internet_Shop

./: .gitignore  Dockerfile  docker-compose.yml  internet_shop_db  manage.py  nginx.conf  pyproject.toml
cart/: admin.py  apps.py  cart_session.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cartitem_options_and_more.py  0003_alter_cartitem_options.py  0004_alter_cartitem_options_and_more.py
cart/templates/cart/: cart_empty.html  cart_empty_item.html  cart_item.html  cart_modal.html  cart_summary.html
cart/templatetags/: cart_tags.py
internet_shop/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  apps.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_category_slug_alter_product_slug_and_more.py
main/templates/main/: base.html  catalog.html  filter_modal.html  home_content.html  product_detail.html  search_button.html  search_input.html
orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: checkout_content.html  empty_cart.html
payment/: apps.py  urls.py  views.py
payment/templates/payment/: stripe_cancel.html  stripe_cancel_content.html  stripe_success.html  stripe_success_content.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_first_name_and_more.py  0003_alter_customuser_managers.py  0004_create_missing_customuser_m2m_tables.py
(+7 files in other folders)
