[project]
name = "internet-shop"
version = "0.1.0"
description = ""
authors = [
    {name = "Павел Муслаев",email = "muslaevpavel@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests>=2.34.2",
    "stripe>=15.1.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
